[package]
name = "wavey-h264"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "H.264 Annex B parsing primitives for Wavey media services"
repository = "https://github.com/wavey-ai/av-rs"

[dependencies]
bytes = "1.0"
memchr = "2.6.4"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "iterate_annex_b"
harness = false
