[package]
name = "srt-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "Native bindings for the Secure Reliable Transport library"
repository = "https://github.com/wavey-ai/av-rs"

[features]
default = []
async = []

[dependencies]
libc = "0.2.71"

[build-dependencies]
cmake = "0.1"
# We're very permissive here with bindgen due to https://github.com/rust-lang/cargo/issues/5237
bindgen = "0.*"
